<resources>
    <string name="url">https://purdue.streamguys1.com/wbaa-news</string>
    <string name="app_name">WWBA Alarm</string>
    <string name="alarm_time">Alarm Time:</string>
    <string name="set_time">Set Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="play_manually">Play Manually</string>
    <string name="Sunday">Sun</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
</resources>
