<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.raacker.wwbaalarm.AlarmMainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/wbaa_logo"/>

    <TableLayout
        android:id="@+id/alarm_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:stretchColumns="0"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_list"
        android:textSize="20dp"
        android:text="@string/alarm_time" />

    <Button
        android:id="@+id/set_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:text="@string/set_time" />

    <Button
        android:id="@+id/set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_time"
        android:text="@string/set_alarm" />

    <LinearLayout
        android:id="@+id/day_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_alarm"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_sun"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textOff="@string/Sunday"
            android:textOn="@string/Sunday" />

        <ToggleButton
            android:id="@+id/toggle_mon"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textOff="@string/Monday"
            android:textOn="@string/Monday" />

        <ToggleButton
            android:id="@+id/toggle_tue"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textOff="@string/Tuesday"
            android:textOn="@string/Tuesday" />

        <ToggleButton
            android:id="@+id/toggle_wed"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textOff="@string/Wednesday"
            android:textOn="@string/Wednesday" />

        <ToggleButton
            android:id="@+id/toggle_thu"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textOff="@string/Thursday"
            android:textOn="@string/Thursday" />

        <ToggleButton
            android:id="@+id/toggle_fri"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textOff="@string/Friday"
            android:textOn="@string/Friday" />

        <ToggleButton
            android:id="@+id/toggle_sat"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textOff="@string/Saturday"
            android:textOn="@string/Saturday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/day_list"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/play_manually"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:background="@mipmap/play_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_manually"/>

    </LinearLayout>

</RelativeLayout>
